# FunkyTemplates

./: .gitignore  Cargo.toml  README.md  build.rs
examples/fractions/: Cargo.toml
examples/fractions/src/: main.rs
examples/speedtest/: Cargo.toml
examples/speedtest/src/: main.rs  python_equi.py
examples/templating/: Cargo.toml
examples/templating/src/: main.rs
funki_lib/: Cargo.toml  README.md  TODO.md
funki_lib/src/: lib.rs  test.rs
funki_lib/src/ast/: mod.rs
funki_lib/src/data_types/: mod.rs
funki_lib/src/external_operators/: mod.rs
funki_lib/src/interpreter/: builtins.rs  mod.rs  test.rs
funki_lib/src/parser/: language_definition.lalrpop  test.rs
src/: lib.rs  test.rs
src/ast/: mod.rs
src/data_types/: mod.rs
src/external_operators/: mod.rs
src/interpreter/: builtins.rs  mod.rs  string_escapes.rs  test.rs
src/parser/: language_definition.lalrpop  language_definition.rs  mod.rs  string_escapes.rs  test.rs
