[package]
name = "funki_lang"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = "A customisable embeddable functional langauge."
license = "MIT"

[build-dependencies]
lalrpop = "0.19.7"

[dependencies]
lalrpop-util = { version = "0.19.7", features = ["lexer"] }
regex = "1"
itertools = "0.10.3"
match_cast = "0.1.2"